[package]
name = "xdp_port_forwarding-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
xdp_port_forwarding-common = { path = "../xdp_port_forwarding-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp_port_forwarding"
path = "src/main.rs"
