[package]
name = "xtask"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
# 빌드 중 발생하는 에러를 깔끔하게 처리합니다.
anyhow = { workspace = true }

# 빌드 명령어를 관리합니다 (예: cargo xtask run --release)
clap = { workspace = true, features = ["derive"] }

# 프로젝트 내 파일 경로를 자동으로 찾아줍니다.
cargo_metadata = { workspace = true }

# 시스템에 bpf-linker 등이 설치되어 있는지 확인합니다.
which = { workspace = true }